# SpeakEasy

./: LICENSE  README.md
SpeakEasy/: Info.plist  SpeakEasyApp.swift
SpeakEasy.xcodeproj/: project.pbxproj
SpeakEasy/Assets.xcassets/AccentColor.colorset/: Contents.json
SpeakEasy/Models/: ObjectData.swift  ObjectItem.swift
SpeakEasy/Services/: APIService.swift  AuthenticationService.swift  CameraService.swift  ProgressManager.swift  SpeechService.swift
SpeakEasy/Views/: CameraRecognitionView.swift  CategoriesView.swift  CelebrationView.swift  ContentView.swift  FlashcardDetailView.swift  FlashcardListView.swift  HomeView.swift  ProgressView.swift  RemoteImageView.swift  SettingsView.swift  SignInView.swift
SpeakEasyTests/: SpeechServiceTests.swift
backend/: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  database.py  main.py
backend/app/models/: __init__.py  attempt.py  object.py  player.py  progress.py
backend/app/routers/: __init__.py  auth.py  game.py  objects.py  players.py  progress.py
backend/app/schemas/: __init__.py  attempt.py  object.py  player.py  progress.py
backend/app/services/: __init__.py  cloudinary_service.py  scoring.py
backend/scripts/: bulk_add_objects.py
